addedNavBar icon toggle

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Neil - Mock project</title>
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"  rel="stylesheet" />
 <link href="css/main.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
@@ -16,7 +17,7 @@ Mock project by Neil Fowler!
 <section class="mp_page_wrapper">
 <div class="header_level2">
 <span class="logo">Neil Fowler</span>
-<span class="logo_mobile_menu">Neil Fowler</span>
+<span class="logo_mobile_menu">Neil Fowler<i class="fa fa-bars" aria-hidden="true"></i></span>
     <ul class="nav_left">
   <a href="#"> <li>Getting started</li></a>
     <a href="#"><li>CSS</li></a>
